--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
                     <li><a href="#">אודות</a></li>
                     <li><a href="#">שאלות נפוצות</a></li>
                     <li><a href="#">צרו קשר</a></li>
-
                 </ul>
             </div>
         </nav>
@@ -56,9 +55,14 @@
                 </tr>
             </thead>
             <tbody>
-                <!-- טבלת הנתונים תופעל כאן -->
+                <!-- Table data will be dynamically generated here -->
             </tbody>
         </table>
+
+        <div class="add-review-section">
+            <h2>הוסף ביקורת חדשה</h2>
+            <button id="add-review-btn">הוסף ביקורת</button>
+        </div>
 
         <div class="subscribe-section">
             <h2>הירשם לניוזלטר שלנו</h2>
@@ -76,7 +80,6 @@
     <div class="popup" id="popup">
         <div class="popup-content">
           <a href="#" class="close-popup" id="close-popup">&#10005;</a>
-          <a href="#" class="exit-btn" id="exit-btn">סגור</a>
           <h2>הרשמה / כניסה</h2>
           <form id="login-form">
             <input type="text" placeholder="שם משתמש" id="username-input">
@@ -84,7 +87,31 @@
             <button type="submit">התחברות</button>
           </form>
         </div>
-      </div>
+    </div>
+
+    <div class="popup" id="add-review-popup">
+        <div class="popup-content">
+          <a href="#" class="close-popup" id="close-review-popup">&#10005;</a>
+          <h2>הוסף ביקורת</h2>
+          <form id="add-review-form">
+            <label for="brand-input">יצרן:</label>
+            <input type="text" id="brand-input" required>
+            <label for="make-input">דגם:</label>
+            <input type="text" id="make-input" required>
+            <label for="model-input">תת דגם:</label>
+            <input type="text" id="model-input" required>
+            <label for="year-input">שנה:</label>
+            <input type="number" id="year-input" required>
+            <label for="fuel-efficiency-input">יכולת דלק:</label>
+            <input type="text" id="fuel-efficiency-input" required>
+            <label for="reliability-input">אמינות:</label>
+            <input type="text" id="reliability-input" required>
+            <label for="safety-input">בטיחות:</label>
+            <input type="text" id="safety-input" required>
+            <button type="submit">הוסף ביקורת</button>
+          </form>
+        </div>
+    </div>
 
     <script src="./script.js"></script>
 </body>
